# body_mass_index_calculator

./: Cargo.toml  README.md
src/: body.rs  io_handler.rs  main.rs  report.rs
